# code_snippet

./: .gitignore  Makefile  env.c
algorithm/list/seqlist/: main.c  seqlist.c  seqlist.h
algorithm/list/single_linklist/: main.c  single_linklist.c  single_linklist.h
algorithm/seqstack/: main.c  seqstack.c  seqstack.h
algorithm/single_linklist/: main.c  single_linklist.c  single_linklist.h
algorithm/sort/: main.c  sort.c  sort.h
algorithm/stack/app/: Makefile  bracketMatch.c  bracketMatch.txt  expressionConvert.c  expressionConvert.txt  expressionConvertTestCase.txt  postfixExpression.c  postfixExpression.txt  powerExpression.c
algorithm/stack/app/postfixExpression/: Makefile  getch.c  getch.h  main.c  stack.c  stack.h
algorithm/stack/linkstack/: linkstack.c  linkstack.h  main.c
algorithm/stack/seqstack/: main.c  seqstack.c  seqstack.h
algorithm/tree/app/: Makefile  README.md  main.c  stack.h  test.txt
algorithm/tree/app/expressionOperation/: Makefile  README.md  main.c  stack.c
algorithm/tree/app/findSort/: Makefile  README.md  main.c  test.txt
algorithm/tree/bitree/: bitree.c  bitree.h  main.c
bash/: traverse.sh
c++_study/demo1_multi_file/: main.cpp  student.cpp  student.hpp
c++_study/demo2_template/: template.cpp
config_file/: config1.c  config1.h  config2.c  config2.h  read_config.c  read_config1.c  read_config2.c  test1.conf  test2.conf
core/: build_subdir.mk
exam/haier/: bracketMatch.c  matrixMultiplication.c
exam/huawei/: getPathLen.c  processTask.c  test.txt
exam/point_to_offer/: 0301_duplicateInArray.c  0302_duplicateInArray.c  0401_findInMatrix.c  05_mergeArray.c
expect/: auto_reset-camera-test.exp  auto_reset.exp
hardware/: pcie_sysfs.c  pcie_sysfs_can.c  pcie_sysfs_gpio.c  rtctest.c  watchdot_test.c
hook/: CMakeLists.txt  Makefile  hook.c
hook/lib/: CMakeLists.txt  CMakeLists.txt.cjson  config_data.c  config_data.h  hook.c
hook/lib/include/: thermal.h
init_example/: Makefile  README.md  a.c  b.c  init.h  main.c
kernel_module/: Makefile
kernel_module/backtrace/: Makefile  probe_backtrace.c
kernel_module/bh_test/: bh_test.c
kernel_module/char_drv/: Makefile  char_drv.c
kernel_module/completion/: Makefile  README.org  complete-uaf.c  crash-log.txt
kernel_module/cpuhp-qos/: Makefile  cpuhp-qos.c
kernel_module/hello/: Makefile  hello.c
kernel_module/hw_breakpoint/: Makefile  hw_breakpoint.c
kernel_module/lockdep/: Makefile  lockdep-rwlock.c
kernel_module/multi_src_file/: Makefile  regrw2.c
kernel_module/qos/: Kconfig  Makefile  cpufreq-qos.c  cpuhp-qos.c  devfreq-qos.c
kernel_module/regrw_multi/: Makefile  regrw1.c
kernel_module/regrw_single/: regrw.c
kernel_module/regulator_test/: Makefile  regulator_test.c
kernel_module/rt-cfs-quota/: Makefile  rt_cfs_quota.c
kernel_module/sdei/: Makefile  README.org  sdei-test.c
kernel_module/single_src_file/: Makefile  regrw.c
kernel_module/smc/: Makefile  README.org  smc_helper.c
kernel_module/smc/utils/: CMakeLists.txt  cpu_context.c  smc.c
kernel_module/timer/: Makefile  timer-debugobject-test.c
kernel_module/workqueue_test/: Makefile  README.org  cpu-hotplug-test.sh  unbond_test.c  work-test.c
linux_app/: arg.c  daemon.c  exit.c  fork.c  fork_exec_exit_wait.c  getopt.c  singal.c  stat.c
log/: ipmitool_log.c  log.c  log.h
makefile/: Makefile  Makefile_app_multi  Makefile_app_single  Makefile_go  Makefile_module  Makefile_module_multi  Makefile_module_single
openssl_demo/: Makefile  command.sh  decrypt.c  encrypt.c  main.c
rawsocket/: rawsocket.c
rpc_intf/: .gitignore  Makefile
rpc_intf/intf/: rpc_intf.c  rpc_intf.h  rpc_msg.h
rpc_intf/lib/: log.c  log.h  utils.c  utils.h
rpc_intf/src/: client.c  rpc_cmd.c  rpc_cmd.h  server.c
socket/: .gitignore  Makefile  get_mac_address.c  netlink.c
socket/can/: Makefile  canrecv.c  cansend.c
socket/fpga_socket/: Makefile  fpga_socket.c  fpga_socket.h  main.c
socket/raw/: client.c  rawsocket.c  recv_and_check_lost.c  recv_and_send.c  send_recv.c  server.c
socket/tcp/: Makefile  READMD.md  client.c  server_blocked.c  server_epoll.c  server_fork.c
socket/udp/: Makefile  broadcast.c  client.c  inc.h  server.c
system_manager/: service_monitor.c
